fix: コントロールバーJumpボタンのサイズを16に

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -31,7 +31,7 @@
 
 #ytp-jump .ytp-jump__label {
   display: block;
-  font-size: 12px;
+  font-size: 16px;
   line-height: 1;
   font-weight: 500;
   letter-spacing: .02em;
